--- a/default/commands-anime.yml
+++ b/default/commands-anime.yml
@@ -3,6 +3,9 @@ commands:
     mal:
       anime:
         description: "Mostra informações de animes no MyAnimeList"
+        examples:
+          - "Nichijou |-| Procura por \"Nichijou\" no MyAnimeList"
+          - "Pop Team Epic |-| Procura por \"Pop Team Epic\" no MyAnimeList"
         unknown: "Desconhecido"
         score: "Avaliação"
         rank: "Rank"
