--- a/default/commands-discord.yml
+++ b/default/commands-discord.yml
@@ -46,6 +46,10 @@ commands:
       emoteTooBig: "O emoji é grande demais! O Discord permite emojis de, no máximo, {0}."
     renameemoji:
       description: "Renomeia um emoji"
+      examples:
+        - ":gesso: gessy |-| Renomeia um emoji pela menção"
+        - "524938593475756042 sad_gesso |-| Renomeia um emoji pelo ID"
+        - "gesso_cat sad_gesso |-| Renomeia um emoji pelo nome"
       emoteNotFound: "Nenhum emoji encontrado!"
       emoteNameLength32Error: "O nome que você quer renomear é maior do que 32 caracteres!"
       emoteNameLength2Error: "O nome que você quer renomear é menor do que 2 caracteres!"
@@ -111,6 +115,9 @@ commands:
       polluxCute: "Sim, a Pollux também é fofis. Sempre juntas comemorando as nossas conquistas!"
     serverinfo:
       description: "Veja as informações do servidor do Discord atual!"
+      examples:
+        - "|-| Mostra as informações do servidor atual"
+        - "420626099257475072 |-| Mostra as informações de um servidor pelo ID, e que por coincidência é o ID do servidor de suporte mais incrível desse site!"
       verificationLevel: "Nível de Verificação"
       features: "Recursos Exclusivos"
       owner: "Dono"
@@ -125,6 +132,9 @@ commands:
       voiceChannels: "Voz"
     servericon:
       description: "Mostra o ícone do servidor atual!"
+      examples:
+        - "|-| Mostra o ícone do servidor atual"
+        - "297732013006389252 |-| Mostra o ícone de um servidor pelo ID, e que por coincidência é o ID do servidor com o ícone mais elegante desse site!"
       noIcon: "Awww, que pena, o servidor não tem um ícone para eu mostrar... Calma, não fique triste! Aqui, veja esse emoji fofis para te alegrar! {0}"
     say:
       messageSentBy: "Mensagem enviada por {0}"
