Add examples for `+rbuser`

--- a/default/commands-roblox.yml
+++ b/default/commands-roblox.yml
@@ -22,3 +22,6 @@ commands:
       followers: "Seguidores"
       friends: "Amigos"
       favoriteGames: "Jogos Favoritos"
+      examples:
+        - "cazum8"
+        - "lol738236"
