Fix Minecraft category and say command examples

--- a/default/commands/say.yml
+++ b/default/commands/say.yml
@@ -5,7 +5,7 @@ examples:
 - "#bate-papo Olá mundo! |-| Envia uma mensagem no canal que foi mencionado"
 - "297732013006389252 Olá mundo! |-| Envia uma mensagem em outro canal pelo ID do canal"
 # Needs to be single quoted due to the escaping
-- '{ \embed\: { \description\: \"Olá mundo\", \color\: -16727585 } } |-| Envia uma mensagem com embed usando o código JSON do embed'
+# - '{ embed: { description: "Olá mundo", color: -16727585 } } |-| Envia uma mensagem com embed usando o código JSON do embed'
 iDontHavePermissionToTalkIn: "Eu não tenho permissão para falar no {0}!"
 messageSentBy: "Mensagem enviada por {0}"
 messageSuccessfullySent: "Mensagem enviada no {0} com sucesso!"
